2011-07-22 Raul Jimenez Estupinan  <raul.jimenez.estupinan@cern.ch>
	* tag V01-05-64
	* Add "Copy Sequence" option (bug/feature 75955).
	* Add "Copy Path" option (bug/feature 75955).
	* Add "Enable Path cloning" under "Options" menu. (bug/feature 75955).
	
2011-07-19 Raul Jimenez Estupinan  <raul.jimenez.estupinan@cern.ch>
	* tag V01-05-63 
	* Set empty scalar assignment to "None" in Python converter. bug 84064
	* Add "Clone sequence" option. (bug/feature 75955).
	* Add "Clone path" option. (bug/feature 75955).

2011-07-13 Raul Jimenez Estupinan  <raul.jimenez.estupinan@cern.ch>
	* tag V01-05-62
	* Include MessageLoggerDialog changes.	(Andrea).

2011-07-13 Raul Jimenez Estupinan  <raul.jimenez.estupinan@cern.ch>
	* tag V01-05-61
	* Remove ClassCastException passing the mouse over module nodes. bug 84305
	* Set empty scalar parameter to "None" by default in Python converter. bug 84064
	* Add "Clone Module" feature for Paths and Sequences. (bug/feature 83912).

2011-07-07 Raul Jimenez Estupinan  <raul.jimenez.estupinan@cern.ch>
	* tag V01-05-60
	* "Deep Import" considers out of order items.
	* Fixes some minor errors regarding to "Deep Import". 

2011-07-05 Raul Jimenez Estupinan  <raul.jimenez.estupinan@cern.ch>
	* tag V01-05-59
	* Big Fix: Update EventContents when renaming and creating Streams. bug 83721
	* Add "Deep Import" feature for Paths and Sequences.

2011-06-29  Martin Grunewald  <Martin.Grunewald@cern.ch>
	* tag V01-05-58
	* Bug fix in replace Sequence/Path: if parent already contains the new
	  Sequence/Path and thus after replace it is occuring twice, then the
	  the earlier occurance is kept while the later occurance is removed.

2011-06-27 Raul Jimenez Estupinan  <raul.jimenez.estupinan@cern.ch>
	* tag V01-05-57
	* Change "Update all existing ESModules" to "Import all ESModules".
	* Add "Update all existing Modules".
	* Remove some unreachable code in ConfigurationTreeActions.java
	
2011-06-23 Raul Jimenez Estupinan  <raul.jimenez.estupinan@cern.ch>